force-app/main/default/objects/Meeting__c/fields/Allow_participants_to_join_anytime__c.field-meta.xml
<CustomField>
    <fullName>Allow_participants_to_join_anytime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow participants to join anytime</label>
    <type>Checkbox</type>
</CustomField>