force-app/main/default/objects/Meeting__c/fields/Approval_type__c.field-meta.xml
<CustomField>
    <fullName>Approval_type__c</fullName>
    <label>Approval type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Automatically Approve</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Manually Approve</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>No Registration Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>