force-app/main/default/objects/Meeting__c/fields/Automatically_record_meeting__c.field-meta.xml
<CustomField>
    <fullName>Automatically_record_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically record meeting</label>
    <type>Checkbox</type>
</CustomField>