force-app/main/default/objects/Meeting__c/fields/End_date_time__c.field-meta.xml
<CustomField>
    <fullName>End_date_time__c</fullName>
    <label>End date time</label>
    <type>Date</type>
</CustomField>