force-app/main/default/objects/Meeting__c/fields/Host_video__c.field-meta.xml
<CustomField>
    <fullName>Host_video__c</fullName>
    <label>Host video</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>On</label>
            </value>
            <value>
                <fullName>false</fullName>
                <default>true</default>
                <label>Off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>