force-app/main/default/objects/Meeting__c/fields/Monthly_week__c.field-meta.xml
<CustomField>
    <fullName>Monthly_week__c</fullName>
    <label>Monthly week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>First week</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Second week</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Third week</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Fourth week</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>Last week</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>