force-app/main/default/objects/Meeting__c/fields/Monthly_week_day__c.field-meta.xml
<CustomField>
    <fullName>Monthly_week_day__c</fullName>
    <label>Monthly week day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Sunday</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Saturday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>