force-app/main/default/objects/Meeting__c/fields/Mute_participants_upon_entry__c.field-meta.xml
<CustomField>
    <fullName>Mute_participants_upon_entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute participants upon entry</label>
    <type>Checkbox</type>
</CustomField>