force-app/main/default/objects/Meeting__c/fields/Participant_video__c.field-meta.xml
<CustomField>
    <fullName>Participant_video__c</fullName>
    <label>Participant video</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>On</label>
            </value>
            <value>
                <fullName>false</fullName>
                <default>true</default>
                <label>Off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>