force-app/main/default/objects/Meeting__c/fields/Registration_type__c.field-meta.xml
<CustomField>
    <fullName>Registration_type__c</fullName>
    <label>Registration type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Attendees register once and can attend any of the occurrences</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Attendees need to register for each occurrence to attend</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Attendees register once and can choose one or more occurrences to attend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>