force-app/main/default/objects/Meeting__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Los_Angeles</fullName>
                <label>Pacific Time (US and Canada)</label>
            </value>
            <value>
                <fullName>Pacific/Midway</fullName>
                <label>Midway Island, Samoa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>