force-app/main/default/objects/Meeting__c/fields/Zoom_Account__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Account</label>
    <referenceTo>Zoom_Account__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>